src/objects/BT_CO_ARMS_CreateAccountBatchResonseFile__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Job_Id__c</fullName>
        <label>Batch_Job_Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Run_Date__c</fullName>
        <label>Batch Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Validation_Details__c</fullName>
        <label>Validation Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Validation_Status__c</fullName>
        <label>Validation Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountCreationDate__c</fullName>
        <label>accountCreationDate</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountNumber__c</fullName>
        <label>accountNumber</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>approvedDebtExposureAmount__c</fullName>
        <label>approvedDebtExposureAmount</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>businessSector__c</fullName>
        <label>businessSector</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrId__c</fullName>
        <label>ccrId</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>creditLimitExternal__c</fullName>
        <label>creditLimitExternal</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>creditLimitInternal__c</fullName>
        <label>creditLimitInternal</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>creditTermReference__c</fullName>
        <label>creditTermReference</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>creditTerm__c</fullName>
        <label>creditTerm</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>debtManagementTreatment__c</fullName>
        <label>debtManagementTreatment</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>returnMessage__c</fullName>
        <label>returnMessage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>returnStatus__c</fullName>
        <label>returnStatus</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>BT_CO_ARMS_CreateAccountBatchResonseFile</label>
    <nameField>
        <label>BT_CO_ARMS_ExportTerminatedAccounts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BT_CO_ARMS_CreateAccountBatchResonseFile</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>